# Spice

./: .gitignore  COMMUNICATION.md  README.md  README_zh.md  pyproject.toml
docs/: README.md  architecture.md  context_compiler.md  decision.md  decision_quickstart.md  llm_boundaries.md  sdep_v0_1.md  v0_1_consolidation.md  world_model.md
spice-hermes-bridge/: README.md  config.example.toml  pyproject.toml
spice-hermes-bridge/examples/: commitment_declared.json  execution_result_observed.json  executor_capability_observed.json  whatsapp_message.json  work_item_opened.json
spice-hermes-bridge/spice_hermes_bridge/: __init__.py  cli.py
spice-hermes-bridge/spice_hermes_bridge/adapters/: __init__.py  github_pr.py  whatsapp.py
spice-hermes-bridge/spice_hermes_bridge/extraction/: __init__.py  commitments.py  llm.py  proposals.py
spice-hermes-bridge/spice_hermes_bridge/hermes/: __init__.py
spice-hermes-bridge/spice_hermes_bridge/integrations/: __init__.py  hermes_executor.py  hermes_relay.py  hermes_sdep_agent.py  hermes_sdep_native.py  spice_demo.py  whatsapp_reply.py  whatsapp_server.py
spice-hermes-bridge/spice_hermes_bridge/observations/: __init__.py  builder.py  schema.py
spice-hermes-bridge/spice_hermes_bridge/spice/: __init__.py
spice-hermes-bridge/spice_hermes_bridge/storage/: __init__.py  delivery.py  pending.py
spice-hermes-bridge/tests/: test_github_pr_ingress.py  test_hermes_relay.py  test_hermes_sdep_agent.py  test_hermes_sdep_native.py  test_observation_schema.py  test_spice_demo_integration.py  test_whatsapp_ingress.py  test_whatsapp_server.py
(+215 files in other folders)
